# ===================================================================
# パッケージの検査
# ===================================================================


# ===================================================================
# インクルードパスの設定
# ===================================================================
include_directories(
  ${Python3_INCLUDE_DIRS}
  )


# ===================================================================
# サブディレクトリの設定
# ===================================================================


# ===================================================================
#  ソースファイルの設定
# ===================================================================


# ===================================================================
#  ターゲットの設定
# ===================================================================

ym_add_object_library ( py_ymbnet
  ymbnet_module.cc
  PyBnNetwork.cc
  )

add_library ( py_ymbnetlib
  SHARED
  $<TARGET_OBJECTS:py_ymbnet_obj>
  $<TARGET_OBJECTS:ym_bnet_obj>
  $<TARGET_OBJECTS:ym_logic_obj>
  $<TARGET_OBJECTS:ym_base_obj>
  )

set_target_properties( py_ymbnetlib
  PROPERTIES
  PREFIX ""
  OUTPUT_NAME "ymbnet"
  )

target_link_libraries( py_ymbnetlib
  ${YM_LIB_DEPENDS}
  )

# ===================================================================
#  インストールターゲットの設定
# ===================================================================
